--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@opentelemetry/api": "^1.4.1",
+    "@opentelemetry/exporter-jaeger": "^1.12.0",
     "@opentelemetry/instrumentation-http": "^0.38.0",
     "@opentelemetry/instrumentation-mongodb": "^0.34.1",
     "@opentelemetry/sdk-trace-node": "^1.12.0",
